# argmatch

./: .gitignore  LICENSE  pyproject.toml
docs/source/: argmatch.rst  conf.py  index.rst  modules.rst
src/argmatch/: __init__.py
